# NeuralTask1

./: README.md  analysis.py  app.py  compare_models.py  confusion_matrices.py  diabetes_analysis.py  diabetes_models.py  evaluation_plan.md  feature_selection.py  formal_report.md  kfold_analysis.py  main_comparison.py  model_comparison.py  model_comparison_results.csv  notes.txt  optimized_model.py  requirements.txt  train_and_save_models.py  train_keras_model.py
app/: main.py  requirements.txt
app/models/: keras_model.keras  logistic_regression_model.pkl  random_forest.pkl  random_forest_model.pkl  scaler.pkl  svm_model.pkl
backend/: README.md  build.sh  fly.toml  main.py  pyproject.toml  render.yaml  requirements.txt
backend/models/: logistic_regression.pkl  svm.pkl
static_site/: index.html  index.html.bak
