[project]
name = "diabetes-prediction-api"
version = "0.1.0"
description = "Diabetes Prediction API"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.0",
    "numpy>=1.19.5",
    "scikit-learn>=0.24.2",
    "tensorflow>=2.7.0",
    "joblib>=1.0.1",
    "python-multipart>=0.0.5"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
