[tool.poetry]
name = "diabetes-prediction-api"
version = "0.1.0"
description = "Diabetes Prediction API"
authors = ["Devin <devin@ai.dev>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.5.1"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
tensorflow = "^2.15.0"
joblib = "^1.3.2"
python-multipart = "^0.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
